# EgoLife

./: .gitignore  README.md
EgoGPT/: .gitignore  README.md  datasets  demo.py  download.py  gradio_demo.py  infer.bash  infer.py  inference.py  pyproject.toml  train_egogpt.sh  train_egogpt_debug.sh
EgoGPT/egogpt/model/: egogpt_arch.py
EgoGPT/egogpt/model/multimodal_encoder/: builder.py  efficientvit_encoder.py
EgoGPT/egogpt/model/multimodal_projector/: builder.py
EgoGPT/egogpt/model/speech_encoder/: speech_encoder.py
EgoGPT/egogpt/train/: train_audio.py
EgoGPT/scripts/: train_egogpt.sh  train_egogpt_debug.sh
EgoRAG/: .gitignore  README.md  Readme.md  create_database.py  gen_event.py  main.py  pyproject.toml
EgoRAG/config/: 4o.yaml  default.yaml  egogpt.yaml  internvideo2.yaml  ixc2_5.yaml  llava_next.yaml  llava_next_video.yaml  llava_ov.yaml  longva.yaml  oryx.yaml
EgoRAG/configs/: egogpt.yaml  internvideo2.yaml  ixc2_5.yaml  llava_next.yaml  llava_ov.yaml  llava_video.yaml  oryx.yaml  qwen2_vl.yaml
EgoRAG/egorag/agents/: RagAgent.py
EgoRAG/egorag/database/: Chroma.py
EgoRAG/egorag/models/: __init__.py  azure.py  base.py  egogpt.py  egogpt_api.py  internvideo2.py  ixc2_5.py  llava.py  llava_next.py  llava_ov.py  longva.py  oryx.py  qwen2_vl.py
EgoRAG/egorag/utils/: agent_fun.py  deepseek.py  gen_event.py  mm_process.py  prompts.py  util.py  vision_process.py
