[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egorag"
version = "0.1.0"
description = "A basic package for EgoRAG"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "chromadb==0.5.20", "openai==1.55.3", "open_clip_torch==2.29.0",
    "azure-ai-inference==1.0.0b9"
]
authors = [
    {name = "HongmingGuo", email = "ghm0221@bupt.edu.cn"}
]

[project.optional-dependencies]


[tool.setuptools.packages.find]
include = ["egorag*"]

[tool.wheel]
include = [ "model*"]
